A landing page for my maze game

--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
         <div class="features">
             <div class="feature">
                 <h3>Feature : Intuitive Controls</h3>
-                <p>To move around the maze you can use this buttons W,A,D,S. the W button is to move forward, The S is to move bacwards, the a button is to turn to the left and the D button is to turn to the right. Other features will be added as we update the game</p>
+                <p>To move around the maze you can use this buttons W,A,D,S. the W button is to move forward</p>,
+                <p></p>The S is to move bacwards, the a button is to turn to the left and the D button is to turn to the right. Other features will be added as we update the game</p>
             </div>
     </section>
     <section id="about">
