--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </div>
             <div class="feature">
                 <video width="640" height="480" controls></video>
-                <video src="videos/Demo.mp4" type="video/mp4"></video>
+                <video src="images/Demo.mp4" type="video/mp4"></video>
                 <h3>Feature 3: Stunning Game play</h3>
                 <p>Experience stunning and realistic gameplay that challenges your navigation skills.</p>
             </div>
