--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <section id="home" class="cover">
         <h1>3D Maze Game</h1>
         <p>Explore the immersive <strong>3D maze game</strong>, challenging your navigation skills! To play this game you will need to clone the repository and run playgame</p>
-        <a href="https://deployedprojecturl.com" class="button">Play the Game</a>
+        <a href="https://github.com/Valentynszn/ALX_final_project" class="button">Play the Game</a>
     </section>
     <div class="header">
         <a href="#home">Home</a>
@@ -98,8 +98,7 @@
                 <p>Experience stunning and realistic graphics as you navigate through the maze.</p>
             </div>
             <div class="feature">
-                <video width="640" height="480" controls></video>
-                <video src="images/Demo.mp4" type="video/mp4"></video>
+            <iframe width="640" height="480" src="https://youtu.be/ul_Kx_xiw2w?si=QuSRiFrCbeQaG73i" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <h3>Feature 3: Stunning Game play</h3>
                 <p>Experience stunning and realistic gameplay that challenges your navigation skills.</p>
             </div>
